--- a/CHS Hunt/hunt3.ipynb
+++ b/CHS Hunt/hunt3.ipynb
@@ -76,7 +76,7 @@
     "        return self.name       \n",
     "    \n",
     "    def get_score(self):\n",
-    "        return ((self.purchased * .5) + (self.two * .2) + (self.three * .5) + self.four + self.five)"
+    "        return ((self.purchased * .3) + (self.two * .2) + (self.three * .5) + self.four + self.five)"
    ]
   },
   {
@@ -113,11 +113,11 @@
    "source": [
     "# Finding the top Hunter\n",
     "def top_hunter(roster):\n",
-    "    hunts = 0\n",
+    "    hunt = 0\n",
     "    for _ in roster:\n",
-    "        if _.name != 'Total' and _.name != 'Anonymous' and _.hunt > hunts: hunts = _.hunt\n",
+    "        if _.name != 'Total' and _.name != 'Anonymous' and _.hunt > hunt: hunt = _.hunt\n",
     "    for _ in roster:\n",
-    "        if _.hunt == hunts:\n",
+    "        if _.hunt == hunt:\n",
     "            return _\n",
     "        \n",
     "# Find the top Buyer\n",
@@ -136,6 +136,14 @@
     "        if _.name != 'Total' and _.name != 'Anonymous' and _.total > gifts: gifts = _.total\n",
     "    for _ in roster:\n",
     "        if _.total == gifts: \n",
+    "            return _\n",
+    "        \n",
+    "def top_points(roster):\n",
+    "    points = 0\n",
+    "    for _ in roster:\n",
+    "        if _.name != 'Total' and _.name != 'Anonymous' and _.score > points: points = _.score\n",
+    "    for _ in roster:\n",
+    "        if _.score == points:\n",
     "            return _"
    ]
   },
@@ -156,7 +164,8 @@
     "    Level 2s: {_.two}\n",
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
-    "    Level 5s: {_.five}\"\"\")\n",
+    "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")\n",
     "\n",
     "# overall Breakdowns\n",
     "def overall_breakdown(_):\n",
@@ -168,7 +177,8 @@
     "    Level 2s: {_.two}\n",
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
-    "    Level 5s: {_.five}\"\"\")"
+    "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")"
    ]
   },
   {
@@ -193,35 +203,25 @@
    "outputs": [],
    "source": [
     "# Finding the Naughty List\n",
-    "class Naughty():\n",
-    "    naughty_list = []\n",
-    "    def __init__(self, name, total, score, hunt, purchased, one, two, three, four, five):\n",
-    "        self.name = name\n",
-    "        self.total = total\n",
-    "        self.hunt = hunt\n",
-    "        self.purchased = purchased\n",
-    "        self.one = one\n",
-    "        self.two = two\n",
-    "        self.three = three\n",
-    "        self.four = four\n",
-    "        self.five = five\n",
-    "        self.score = score\n",
-    "        self.naughty_list.append(self)\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return f\"{self.name}\"\n",
+    "class Naughty(Guild):\n",
+    "    roster=[]\n",
     "    \n",
     "    @classmethod\n",
     "    def get_naughty_list(self, days):\n",
-    "        print(f\"There are {len(self.naughty_list)} players on the naughty list\")\n",
+    "        print(\"\"\"What it means to be on the naughty list:\n",
+    "    For each hunt report we recieve, we translate each level 2 hunted into .2 points, \n",
+    "    level 3s into .5 points, and level 4/5 into 1 point each. \n",
+    "    Purchasing a pack gives you .3 points. In total, each person is required to make 1 point daily.\n",
+    "    The number shown after your name is the number of total points you were missing for this hunt session.\"\"\")\n",
     "        print()\n",
-    "        for _ in self.naughty_list:\n",
+    "        print(f\"There are {len(self.roster)} players on the naughty list\")\n",
+    "        for _ in self.roster:\n",
     "            print(f\"{_} is missing {round(days-_.score, 2)} days worth of completed hunts.\")\n",
     "        \n",
     "def make_naughty_list(roster, days):\n",
     "    for _ in roster:\n",
     "        if _.score < days:\n",
-    "            Naughty(name=_.name, score=_.score, total=_.total, hunt=_.hunt, purchased=_.purchased, one=_.one, two=_.two, three=_.three, four=_.four, five=_.five)"
+    "            Naughty(name=_.name, total=_.total, hunt=_.hunt, purchased=_.purchased, one=_.one, two=_.two, three=_.three, four=_.four, five=_.five)"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_report(days):\n",
+    "def get_report():\n",
     "    get_roster()\n",
     "    make_naughty_list(Guild.roster, days)\n",
     "    breakdown(top_hunter(Guild.roster), \"Top Hunter\")\n",
@@ -250,6 +250,8 @@
     "    breakdown(top_buyer(Guild.roster), \"Top Buyer\")\n",
     "    space_decorater()\n",
     "    breakdown(top_gifter(Guild.roster), \"Top Gifter\")\n",
+    "    space_decorater()\n",
+    "    breakdown(top_points(Guild.roster), \"Top Score\")\n",
     "    space_decorater()\n",
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
@@ -261,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -277,6 +281,7 @@
       "    Level 3s: 6\n",
       "    Level 4s: 1\n",
       "    Level 5s: 10\n",
+      "    Total Points: 29.5\n",
       "\n",
       "========================================\n",
       "\n",
@@ -290,6 +295,7 @@
       "    Level 3s: 1\n",
       "    Level 4s: 0\n",
       "    Level 5s: 0\n",
+      "    Total Points: 24.5\n",
       "\n",
       "========================================\n",
       "\n",
@@ -303,6 +309,21 @@
       "    Level 3s: 8\n",
       "    Level 4s: 2\n",
       "    Level 5s: 2\n",
+      "    Total Points: 32.2\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Top Score breakdown\n",
+      "    Top Score: Bo55i\n",
+      "    Total Gifts: 75\n",
+      "    Hunts: 56\n",
+      "    Purchases: 19\n",
+      "    Level 1s: 0\n",
+      "    Level 2s: 11\n",
+      "    Level 3s: 22\n",
+      "    Level 4s: 10\n",
+      "    Level 5s: 13\n",
+      "    Total Points: 41.9\n",
       "\n",
       "========================================\n",
       "\n",
@@ -315,6 +336,7 @@
       "    Level 3s: 465\n",
       "    Level 4s: 120\n",
       "    Level 5s: 157\n",
+      "    Total Points: 1051.4\n",
       "\n",
       "========================================\n",
       "\n",
@@ -327,20 +349,26 @@
       "    Level 3s: 4\n",
       "    Level 4s: 0\n",
       "    Level 5s: 0\n",
+      "    Total Points: 32.3\n",
       "\n",
       "========================================\n",
       "\n",
-      "There are 41 players on the naughty list\n",
+      "What it means to be on the naughty list:\n",
+      "    For each hunt report we recieve, we translate each level 2 hunted into .2 points, \n",
+      "    level 3s into .5 points, and level 4/5 into 1 point each. \n",
+      "    Purchasing a pack gives you .3 points. In total, each person is required to make 1 point daily.\n",
+      "    The number shown after your name is the number of total points you were missing for this hunt session.\n",
       "\n",
+      "There are 45 players on the naughty list\n",
       "x TANJIRO xX is missing 0.3 days worth of completed hunts.\n",
       "Mi Bae is missing 0.4 days worth of completed hunts.\n",
-      "CHSBank is missing 0.5 days worth of completed hunts.\n",
+      "CHSBank is missing 0.7 days worth of completed hunts.\n",
       "1 Sweet 1 is missing 4.7 days worth of completed hunts.\n",
       "Sandokam is missing 2.6 days worth of completed hunts.\n",
       "alek sander is missing 1.0 days worth of completed hunts.\n",
       "22Satan is missing 4.7 days worth of completed hunts.\n",
       "Mr Hai GeGe is missing 0.1 days worth of completed hunts.\n",
-      "Daddy Denver is missing 0.3 days worth of completed hunts.\n",
+      "Daddy Denver is missing 0.7 days worth of completed hunts.\n",
       "KloudStrife is missing 0.8 days worth of completed hunts.\n",
       "ALVIROoOoS is missing 4.4 days worth of completed hunts.\n",
       "ZzMCKzZ is missing 2.8 days worth of completed hunts.\n",
@@ -351,21 +379,25 @@
       "UCantFindMe is missing 1.0 days worth of completed hunts.\n",
       "Bomonti is missing 1.1 days worth of completed hunts.\n",
       "MR savage 6 is missing 3.3 days worth of completed hunts.\n",
-      "XxWARRENxX is missing 0.1 days worth of completed hunts.\n",
+      "XxWARRENxX is missing 0.9 days worth of completed hunts.\n",
       "Yazid Muslim is missing 0.9 days worth of completed hunts.\n",
-      "Futt Bucker is missing 1.4 days worth of completed hunts.\n",
-      "Sir LickAlot is missing 2.5 days worth of completed hunts.\n",
+      "Futt Bucker is missing 3.0 days worth of completed hunts.\n",
+      "S L I M E is missing 0.2 days worth of completed hunts.\n",
+      "Sir LickAlot is missing 3.1 days worth of completed hunts.\n",
       "L0RD KAN0N is missing 1.4 days worth of completed hunts.\n",
-      "XxMadManxX is missing 5.0 days worth of completed hunts.\n",
+      "XxMadManxX is missing 5.4 days worth of completed hunts.\n",
       "Figurehead is missing 1.6 days worth of completed hunts.\n",
       "MASAOkun is missing 2.0 days worth of completed hunts.\n",
       "Jeisonn1 is missing 4.3 days worth of completed hunts.\n",
-      "xXxSavvYxXx is missing 2.0 days worth of completed hunts.\n",
+      "xXxSavvYxXx is missing 2.2 days worth of completed hunts.\n",
+      "fortnite btw is missing 0.2 days worth of completed hunts.\n",
+      "SaLaR1Iraqi is missing 0.3 days worth of completed hunts.\n",
+      "UNIQUE SOL is missing 1.4 days worth of completed hunts.\n",
       "WeakSauce1 is missing 2.3 days worth of completed hunts.\n",
       "CHIP B A B Y is missing 4.5 days worth of completed hunts.\n",
       "TankSA is missing 0.5 days worth of completed hunts.\n",
       "command01 is missing 5.5 days worth of completed hunts.\n",
-      "RAZ ALGUL is missing 4.3 days worth of completed hunts.\n",
+      "RAZ ALGUL is missing 4.9 days worth of completed hunts.\n",
       "Umaya is missing 4.5 days worth of completed hunts.\n",
       "Chuck Norri5 is missing 5.4 days worth of completed hunts.\n",
       "Castle0Black is missing 5.5 days worth of completed hunts.\n",
@@ -377,7 +409,7 @@
     }
    ],
    "source": [
-    "get_report(days)"
+    "get_report()"
    ]
   }
  ],
