--- a/CHS Hunt/hunt1.ipynb
+++ b/CHS Hunt/hunt1.ipynb
@@ -78,7 +78,7 @@
     "        return self.name       \n",
     "    \n",
     "    def get_score(self):\n",
-    "        return ((self.purchased * .5) + (self.two * .2) + (self.three * .5) + self.four + self.five)"
+    "        return ((self.purchased * .3) + (self.two * .2) + (self.three * .5) + self.four + self.five)"
    ]
   },
   {
@@ -115,11 +115,11 @@
    "source": [
     "# Finding the top Hunter\n",
     "def top_hunter(roster):\n",
-    "    hunts = 0\n",
+    "    hunt = 0\n",
     "    for _ in roster:\n",
-    "        if _.name != 'Total' and _.name != 'Anonymous' and _.hunt > hunts: hunts = _.hunt\n",
+    "        if _.name != 'Total' and _.name != 'Anonymous' and _.hunt > hunt: hunt = _.hunt\n",
     "    for _ in roster:\n",
-    "        if _.hunt == hunts:\n",
+    "        if _.hunt == hunt:\n",
     "            return _\n",
     "        \n",
     "# Find the top Buyer\n",
@@ -138,6 +138,14 @@
     "        if _.name != 'Total' and _.name != 'Anonymous' and _.total > gifts: gifts = _.total\n",
     "    for _ in roster:\n",
     "        if _.total == gifts: \n",
+    "            return _\n",
+    "        \n",
+    "def top_points(roster):\n",
+    "    points = 0\n",
+    "    for _ in roster:\n",
+    "        if _.name != 'Total' and _.name != 'Anonymous' and _.score > points: points = _.score\n",
+    "    for _ in roster:\n",
+    "        if _.score == points:\n",
     "            return _"
    ]
   },
@@ -158,7 +166,8 @@
     "    Level 2s: {_.two}\n",
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
-    "    Level 5s: {_.five}\"\"\")\n",
+    "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")\n",
     "\n",
     "# overall Breakdowns\n",
     "def overall_breakdown(_):\n",
@@ -170,7 +179,8 @@
     "    Level 2s: {_.two}\n",
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
-    "    Level 5s: {_.five}\"\"\")"
+    "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")"
    ]
   },
   {
@@ -195,35 +205,25 @@
    "outputs": [],
    "source": [
     "# Finding the Naughty List\n",
-    "class Naughty():\n",
-    "    naughty_list = []\n",
-    "    def __init__(self, name, total, score, hunt, purchased, one, two, three, four, five):\n",
-    "        self.name = name\n",
-    "        self.total = total\n",
-    "        self.hunt = hunt\n",
-    "        self.purchased = purchased\n",
-    "        self.one = one\n",
-    "        self.two = two\n",
-    "        self.three = three\n",
-    "        self.four = four\n",
-    "        self.five = five\n",
-    "        self.score = score\n",
-    "        self.naughty_list.append(self)\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return f\"{self.name}\"\n",
+    "class Naughty(Guild):\n",
+    "    roster=[]\n",
     "    \n",
     "    @classmethod\n",
     "    def get_naughty_list(self, days):\n",
-    "        print(f\"There are {len(self.naughty_list)} players on the naughty list\")\n",
+    "        print(\"\"\"What it means to be on the naughty list:\n",
+    "    For each hunt report we recieve, we translate each level 2 hunted into .2 points, \n",
+    "    level 3s into .5 points, and level 4/5 into 1 point each. \n",
+    "    Purchasing a pack gives you .3 points. In total, each person is required to make 1 point daily.\n",
+    "    The number shown after your name is the number of total points you were missing for this hunt session.\"\"\")\n",
     "        print()\n",
-    "        for _ in self.naughty_list:\n",
+    "        print(f\"There are {len(self.roster)} players on the naughty list\")\n",
+    "        for _ in self.roster:\n",
     "            print(f\"{_} is missing {round(days-_.score, 2)} days worth of completed hunts.\")\n",
     "        \n",
     "def make_naughty_list(roster, days):\n",
     "    for _ in roster:\n",
     "        if _.score < days:\n",
-    "            Naughty(name=_.name, score=_.score, total=_.total, hunt=_.hunt, purchased=_.purchased, one=_.one, two=_.two, three=_.three, four=_.four, five=_.five)"
+    "            Naughty(name=_.name, total=_.total, hunt=_.hunt, purchased=_.purchased, one=_.one, two=_.two, three=_.three, four=_.four, five=_.five)"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_report(days):\n",
+    "def get_report():\n",
     "    get_roster()\n",
     "    make_naughty_list(Guild.roster, days)\n",
     "    breakdown(top_hunter(Guild.roster), \"Top Hunter\")\n",
@@ -252,6 +252,8 @@
     "    breakdown(top_buyer(Guild.roster), \"Top Buyer\")\n",
     "    space_decorater()\n",
     "    breakdown(top_gifter(Guild.roster), \"Top Gifter\")\n",
+    "    space_decorater()\n",
+    "    breakdown(top_points(Guild.roster), \"Top Score\")\n",
     "    space_decorater()\n",
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
@@ -263,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -279,6 +283,7 @@
       "    Level 3s: 32\n",
       "    Level 4s: 1\n",
       "    Level 5s: 11\n",
+      "    Total Points: 49.8\n",
       "\n",
       "========================================\n",
       "\n",
@@ -292,6 +297,7 @@
       "    Level 3s: 27\n",
       "    Level 4s: 3\n",
       "    Level 5s: 5\n",
+      "    Total Points: 50.6\n",
       "\n",
       "========================================\n",
       "\n",
@@ -305,6 +311,21 @@
       "    Level 3s: 27\n",
       "    Level 4s: 3\n",
       "    Level 5s: 5\n",
+      "    Total Points: 50.6\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "Top Score breakdown\n",
+      "    Top Score: Highgarden\n",
+      "    Total Gifts: 138\n",
+      "    Hunts: 53\n",
+      "    Purchases: 85\n",
+      "    Level 1s: 0\n",
+      "    Level 2s: 18\n",
+      "    Level 3s: 27\n",
+      "    Level 4s: 3\n",
+      "    Level 5s: 5\n",
+      "    Total Points: 50.6\n",
       "\n",
       "========================================\n",
       "\n",
@@ -317,6 +338,7 @@
       "    Level 3s: 565\n",
       "    Level 4s: 116\n",
       "    Level 5s: 125\n",
+      "    Total Points: 1121.9\n",
       "\n",
       "========================================\n",
       "\n",
@@ -329,53 +351,60 @@
       "    Level 3s: 1\n",
       "    Level 4s: 0\n",
       "    Level 5s: 0\n",
+      "    Total Points: 74.7\n",
       "\n",
       "========================================\n",
       "\n",
-      "There are 58 players on the naughty list\n",
+      "What it means to be on the naughty list:\n",
+      "    For each hunt report we recieve, we translate each level 2 hunted into .2 points, \n",
+      "    level 3s into .5 points, and level 4/5 into 1 point each. \n",
+      "    Purchasing a pack gives you .3 points. In total, each person is required to make 1 point daily.\n",
+      "    The number shown after your name is the number of total points you were missing for this hunt session.\n",
       "\n",
+      "There are 59 players on the naughty list\n",
       "Simicka111 is missing 1.9 days worth of completed hunts.\n",
       "L0RD KAN0N is missing 0.7 days worth of completed hunts.\n",
       "1 SaLaR 1 is missing 6.5 days worth of completed hunts.\n",
       "DonPablo is missing 4.5 days worth of completed hunts.\n",
-      "Imafukyoface is missing 1.0 days worth of completed hunts.\n",
-      "Frozen Roar is missing 7.0 days worth of completed hunts.\n",
+      "Imafukyoface is missing 1.2 days worth of completed hunts.\n",
+      "Frozen Roar is missing 7.2 days worth of completed hunts.\n",
       "ALVIROoOoS is missing 5.8 days worth of completed hunts.\n",
       "XP Alb0Z is missing 4.8 days worth of completed hunts.\n",
       "GOZU JR is missing 6.4 days worth of completed hunts.\n",
       "Mi Bae is missing 4.7 days worth of completed hunts.\n",
       "ShakeBurn is missing 2.9 days worth of completed hunts.\n",
-      "WhoDatBiish is missing 5.0 days worth of completed hunts.\n",
-      "Aure87 is missing 6.7 days worth of completed hunts.\n",
+      "WhoDatBiish is missing 5.4 days worth of completed hunts.\n",
+      "Aure87 is missing 6.9 days worth of completed hunts.\n",
       "The Small is missing 3.1 days worth of completed hunts.\n",
-      "DesfWarr is missing 4.0 days worth of completed hunts.\n",
-      "MASAOkun is missing 6.5 days worth of completed hunts.\n",
+      "UCantFindMe is missing 0.9 days worth of completed hunts.\n",
+      "DesfWarr is missing 5.0 days worth of completed hunts.\n",
+      "MASAOkun is missing 6.7 days worth of completed hunts.\n",
       "Mr Hai GeGe is missing 1.1 days worth of completed hunts.\n",
       "RiriSafitri is missing 2.4 days worth of completed hunts.\n",
       "alek sander is missing 3.5 days worth of completed hunts.\n",
       "PSV 77 is missing 0.1 days worth of completed hunts.\n",
       "Jeisonn1 is missing 2.3 days worth of completed hunts.\n",
       "CHSBank is missing 2.2 days worth of completed hunts.\n",
-      "Futt Bucker is missing 1.9 days worth of completed hunts.\n",
-      "DEMPSEYROLL is missing 0.3 days worth of completed hunts.\n",
+      "Futt Bucker is missing 3.7 days worth of completed hunts.\n",
+      "DEMPSEYROLL is missing 1.5 days worth of completed hunts.\n",
       "ROBANI is missing 0.7 days worth of completed hunts.\n",
       "PEPSI  MAX is missing 5.8 days worth of completed hunts.\n",
       "Mashaakel is missing 2.9 days worth of completed hunts.\n",
       "Figurehead is missing 3.5 days worth of completed hunts.\n",
-      "S L I M E is missing 1.6 days worth of completed hunts.\n",
+      "S L I M E is missing 2.6 days worth of completed hunts.\n",
       "xXxSavvYxXx is missing 3.5 days worth of completed hunts.\n",
       "ozykel is missing 4.4 days worth of completed hunts.\n",
-      "D1CKHEAD is missing 3.5 days worth of completed hunts.\n",
+      "D1CKHEAD is missing 4.9 days worth of completed hunts.\n",
       "CHIP B A B Y is missing 5.0 days worth of completed hunts.\n",
       "DON T  CRY is missing 7.0 days worth of completed hunts.\n",
-      "Sandokam is missing 2.1 days worth of completed hunts.\n",
+      "Sandokam is missing 2.5 days worth of completed hunts.\n",
       "yuzuuuun is missing 1.5 days worth of completed hunts.\n",
       "Wendigo1 is missing 3.7 days worth of completed hunts.\n",
-      "PapaRangeR is missing 5.0 days worth of completed hunts.\n",
+      "PapaRangeR is missing 5.4 days worth of completed hunts.\n",
       "Umaya is missing 6.4 days worth of completed hunts.\n",
-      "XxWARRENxX is missing 5.1 days worth of completed hunts.\n",
-      "Oo F1ST oO is missing 0.3 days worth of completed hunts.\n",
-      "WeakSauce1 is missing 5.3 days worth of completed hunts.\n",
+      "XxWARRENxX is missing 6.1 days worth of completed hunts.\n",
+      "Oo F1ST oO is missing 0.9 days worth of completed hunts.\n",
+      "WeakSauce1 is missing 6.1 days worth of completed hunts.\n",
       "MR savage 6 is missing 6.6 days worth of completed hunts.\n",
       "Meganxcx is missing 8.0 days worth of completed hunts.\n",
       "ZzMCKzZ is missing 3.0 days worth of completed hunts.\n",
@@ -384,8 +413,8 @@
       "2FIERCE is missing 7.0 days worth of completed hunts.\n",
       "SNIPER555QTR is missing 7.8 days worth of completed hunts.\n",
       "XP SuMi is missing 6.1 days worth of completed hunts.\n",
-      "fortnite btw is missing 3.0 days worth of completed hunts.\n",
-      "Tough Co0kie is missing 0.9 days worth of completed hunts.\n",
+      "fortnite btw is missing 4.8 days worth of completed hunts.\n",
+      "Tough Co0kie is missing 2.3 days worth of completed hunts.\n",
       "Mhiacs is missing 7.0 days worth of completed hunts.\n",
       "2 SaLaR 2 is missing 7.8 days worth of completed hunts.\n",
       "x TANJIRO xX is missing 4.1 days worth of completed hunts.\n",
@@ -396,7 +425,7 @@
     }
    ],
    "source": [
-    "get_report(days)"
+    "get_report()"
    ]
   }
  ],
