--- a/CHS Hunt/hunt2.ipynb
+++ b/CHS Hunt/hunt2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np\n",
+    "import pandas as pd\n",
     "from IPython.display import clear_output"
    ]
   },
@@ -179,6 +179,19 @@
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
     "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")\n",
+    "\n",
+    "\n",
+    "def session_average(_):\n",
+    "    print(f\"\"\"{days} day report average breakdown\n",
+    "    Total Gifts: {round(_.total/days, 2)}\n",
+    "    Hunts: {round(_.hunt/days, 2)}\n",
+    "    Purchases: {round(_.purchased/days, 2)}\n",
+    "    Level 1s: {round(_.one/days, 2)}\n",
+    "    Level 2s: {round(_.two/days, 2)}\n",
+    "    Level 3s: {round(_.three/days, 2)}\n",
+    "    Level 4s: {round(_.four/days, 2)}\n",
+    "    Level 5s: {round(_.five/days, 2)}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")"
    ]
   },
@@ -257,6 +270,8 @@
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
     "    overall_breakdown(find_player(\"Anonymous\", Guild.roster))\n",
+    "    space_decorater()\n",
+    "    session_average(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
     "    Naughty.get_naughty_list(days)"
    ]
@@ -351,6 +366,19 @@
       "    Level 4s: 9\n",
       "    Level 5s: 0\n",
       "    Total Points: 74.4\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "7 day report average breakdown\n",
+      "    Total Gifts: 497.14\n",
+      "    Hunts: 329.0\n",
+      "    Purchases: 168.14\n",
+      "    Level 1s: 0.0\n",
+      "    Level 2s: 208.71\n",
+      "    Level 3s: 87.71\n",
+      "    Level 4s: 17.14\n",
+      "    Level 5s: 15.43\n",
+      "    Total Points: 1180.3\n",
       "\n",
       "========================================\n",
       "\n",
