--- a/CHS Hunt/hunt1.ipynb
+++ b/CHS Hunt/hunt1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np\n",
+    "import pandas as pd\n",
     "from IPython.display import clear_output"
    ]
   },
@@ -180,6 +180,19 @@
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
     "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")\n",
+    "\n",
+    "\n",
+    "def session_average(_):\n",
+    "    print(f\"\"\"{days} day report average breakdown\n",
+    "    Total Gifts: {round(_.total/days, 2)}\n",
+    "    Hunts: {round(_.hunt/days, 2)}\n",
+    "    Purchases: {round(_.purchased/days, 2)}\n",
+    "    Level 1s: {round(_.one/days, 2)}\n",
+    "    Level 2s: {round(_.two/days, 2)}\n",
+    "    Level 3s: {round(_.three/days, 2)}\n",
+    "    Level 4s: {round(_.four/days, 2)}\n",
+    "    Level 5s: {round(_.five/days, 2)}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")"
    ]
   },
@@ -258,6 +271,8 @@
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
     "    overall_breakdown(find_player(\"Anonymous\", Guild.roster))\n",
+    "    space_decorater()\n",
+    "    session_average(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
     "    Naughty.get_naughty_list(days)"
    ]
@@ -352,6 +367,19 @@
       "    Level 4s: 0\n",
       "    Level 5s: 0\n",
       "    Total Points: 74.7\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "8 day report average breakdown\n",
+      "    Total Gifts: 398.88\n",
+      "    Hunts: 244.38\n",
+      "    Purchases: 154.5\n",
+      "    Level 1s: 1.38\n",
+      "    Level 2s: 142.25\n",
+      "    Level 3s: 70.62\n",
+      "    Level 4s: 14.5\n",
+      "    Level 5s: 15.62\n",
+      "    Total Points: 1121.9\n",
       "\n",
       "========================================\n",
       "\n",
