--- a/CHS Hunt/hunt3.ipynb
+++ b/CHS Hunt/hunt3.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np\n",
+    "import pandas as pd\n",
     "from IPython.display import clear_output"
    ]
   },
@@ -178,6 +178,18 @@
     "    Level 3s: {_.three}\n",
     "    Level 4s: {_.four}\n",
     "    Level 5s: {_.five}\n",
+    "    Total Points: {round(_.score, 2)}\"\"\")\n",
+    "\n",
+    "def session_average(_):\n",
+    "    print(f\"\"\"{days} day report average breakdown\n",
+    "    Total Gifts: {round(_.total/days, 2)}\n",
+    "    Hunts: {round(_.hunt/days, 2)}\n",
+    "    Purchases: {round(_.purchased/days, 2)}\n",
+    "    Level 1s: {round(_.one/days, 2)}\n",
+    "    Level 2s: {round(_.two/days, 2)}\n",
+    "    Level 3s: {round(_.three/days, 2)}\n",
+    "    Level 4s: {round(_.four/days, 2)}\n",
+    "    Level 5s: {round(_.five/days, 2)}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")"
    ]
   },
@@ -256,6 +268,8 @@
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
     "    overall_breakdown(find_player(\"Anonymous\", Guild.roster))\n",
+    "    space_decorater()\n",
+    "    session_average(find_player(\"Total\", Guild.roster))\n",
     "    space_decorater()\n",
     "    Naughty.get_naughty_list(days)"
    ]
@@ -350,6 +364,19 @@
       "    Level 4s: 0\n",
       "    Level 5s: 0\n",
       "    Total Points: 32.3\n",
+      "\n",
+      "========================================\n",
+      "\n",
+      "6 day report average breakdown\n",
+      "    Total Gifts: 488.5\n",
+      "    Hunts: 311.33\n",
+      "    Purchases: 177.17\n",
+      "    Level 1s: 1.83\n",
+      "    Level 2s: 185.83\n",
+      "    Level 3s: 77.5\n",
+      "    Level 4s: 20.0\n",
+      "    Level 5s: 26.17\n",
+      "    Total Points: 1051.4\n",
       "\n",
       "========================================\n",
       "\n",
