--- a/CHS Hunt/hunt1.ipynb
+++ b/CHS Hunt/hunt1.ipynb
@@ -139,7 +139,7 @@
     "    for _ in roster:\n",
     "        if _.total == gifts: \n",
     "            return _\n",
-    "        \n",
+    "# Find the player with the most points\n",
     "def top_points(roster):\n",
     "    points = 0\n",
     "    for _ in roster:\n",
@@ -169,7 +169,7 @@
     "    Level 5s: {_.five}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")\n",
     "\n",
-    "# overall Breakdowns\n",
+    "# overall Breakdown\n",
     "def overall_breakdown(_):\n",
     "    print(f\"\"\"{_} breakdown\n",
     "    Total Gifts: {_.total}\n",
@@ -182,7 +182,7 @@
     "    Level 5s: {_.five}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")\n",
     "\n",
-    "\n",
+    "# session average Breakdown\n",
     "def session_average(_):\n",
     "    print(f\"\"\"{days} day report average breakdown\n",
     "    Total Gifts: {round(_.total/days, 2)}\n",
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def space_decorater():\n",
+    "def space_decorator():\n",
     "    print()\n",
     "    print(\"=\"*40)\n",
     "    print()"
@@ -261,19 +261,19 @@
     "    get_roster()\n",
     "    make_naughty_list(Guild.roster, days)\n",
     "    breakdown(top_hunter(Guild.roster), \"Top Hunter\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    breakdown(top_buyer(Guild.roster), \"Top Buyer\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    breakdown(top_gifter(Guild.roster), \"Top Gifter\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    breakdown(top_points(Guild.roster), \"Top Score\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    overall_breakdown(find_player(\"Anonymous\", Guild.roster))\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    session_average(find_player(\"Total\", Guild.roster))\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    Naughty.get_naughty_list(days)"
    ]
   },
