--- a/CHS Hunt/hunt3.ipynb
+++ b/CHS Hunt/hunt3.ipynb
@@ -137,7 +137,7 @@
     "    for _ in roster:\n",
     "        if _.total == gifts: \n",
     "            return _\n",
-    "        \n",
+    "# Find the player with the top points\n",
     "def top_points(roster):\n",
     "    points = 0\n",
     "    for _ in roster:\n",
@@ -167,7 +167,7 @@
     "    Level 5s: {_.five}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")\n",
     "\n",
-    "# overall Breakdowns\n",
+    "# overall Breakdown\n",
     "def overall_breakdown(_):\n",
     "    print(f\"\"\"{_} breakdown\n",
     "    Total Gifts: {_.total}\n",
@@ -180,6 +180,7 @@
     "    Level 5s: {_.five}\n",
     "    Total Points: {round(_.score, 2)}\"\"\")\n",
     "\n",
+    "# session average Breakdown\n",
     "def session_average(_):\n",
     "    print(f\"\"\"{days} day report average breakdown\n",
     "    Total Gifts: {round(_.total/days, 2)}\n",
@@ -242,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def space_decorater():\n",
+    "def space_decorator():\n",
     "    print()\n",
     "    print(\"=\"*40)\n",
     "    print()"
@@ -258,20 +259,49 @@
     "    get_roster()\n",
     "    make_naughty_list(Guild.roster, days)\n",
     "    breakdown(top_hunter(Guild.roster), \"Top Hunter\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    breakdown(top_buyer(Guild.roster), \"Top Buyer\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    breakdown(top_gifter(Guild.roster), \"Top Gifter\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    breakdown(top_points(Guild.roster), \"Top Score\")\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    overall_breakdown(find_player(\"Total\", Guild.roster))\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    overall_breakdown(find_player(\"Anonymous\", Guild.roster))\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    session_average(find_player(\"Total\", Guild.roster))\n",
-    "    space_decorater()\n",
+    "    space_decorator()\n",
     "    Naughty.get_naughty_list(days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sandokam\n",
+      "Gonnnw\n",
+      "Anonymous\n",
+      "xoNANAMIox\n",
+      "Total\n",
+      "RAZ ALGUL\n",
+      "Castle0Black\n",
+      "D1CKHEAD\n",
+      "Aure87\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_level_one(roster):\n",
+    "    for _ in roster:\n",
+    "        if _.one > 0:\n",
+    "            print(_)\n",
+    "find_level_one(Guild.roster)"
    ]
   },
   {
