--- a/Hunt Report Template.ipynb
+++ b/Hunt Report Template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_excel('test2.xlsx')"
+    "df=pd.read_excel('.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,177 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top Hunter Breakdown\n",
-      "    Name: Executive LT\n",
-      "    Total Gifts: 24\n",
-      "    Hunts: 24\n",
-      "    Level 1s: 0\n",
-      "    Level 2s: 20\n",
-      "    Level 3s: 4\n",
-      "    Level 4s: 0\n",
-      "    Level 5s: 0\n",
-      "    Total Points: 60\n",
-      "\n",
-      "========================================\n",
-      "\n",
-      "Top Buyer Breakdown\n",
-      "    Name: Highgarden\n",
-      "    Total Gifts: 19\n",
-      "    Packs: 8\n",
-      "    White: 0\n",
-      "    Green: 5\n",
-      "    Blue: 3\n",
-      "    Purple: 0\n",
-      "    Gold: 0\n",
-      "    Total Points: 116\n",
-      "\n",
-      "========================================\n",
-      "\n",
-      "Top Gifter Breakdown\n",
-      "    Name: Executive LT\n",
-      "    Hunts: 24\n",
-      "    Packs: 0\n",
-      "    Total Gifts: 24\n",
-      "    Total Points: 60\n",
-      "\n",
-      "========================================\n",
-      "\n",
-      "Top Points Breakdown\n",
-      "    Name: Highgarden\n",
-      "    Hunts: 11\n",
-      "    Packs: 8\n",
-      "    Total Gifts: 19\n",
-      "    Total Points: 116\n",
-      "\n",
-      "========================================\n",
-      "\n",
-      "Anonymous Breakdown\n",
-      "    Gifts: 10\n",
-      "    Hunts: 0\n",
-      "    Purchases: 10\n",
-      "    Level 1s: 0\n",
-      "    Level 2s: 0\n",
-      "    Level 3s: 0\n",
-      "    Level 4s: 0\n",
-      "    Level 5s: 0\n",
-      "    White: 1\n",
-      "    Green: 5\n",
-      "    Blue: 2\n",
-      "    Purple: 1\n",
-      "    Gold: 1\n",
-      "    Total Points: 26\n",
-      "\n",
-      "========================================\n",
-      "\n",
-      "7 day report average Breakdown\n",
-      "    Total Gifts: 48.43\n",
-      "    Hunts: 33.71\n",
-      "    Purchases: 14.71\n",
-      "    Level 1s: 0.0\n",
-      "    Level 2s: 18.0\n",
-      "    Level 3s: 8.29\n",
-      "    Level 4s: 3.29\n",
-      "    Level 5s: 4.14\n",
-      "    Total Points: 1209\n",
-      "\n",
-      "========================================\n",
-      "\n",
-      "-What it means to be on the naughty list-\n",
-      "    For each hunt report, we translate the gifts from each player into points:\n",
-      "    Loot                |  Bonus \n",
-      "    level 1 : 0 points  |  White  : 1 point\n",
-      "    Level 2 : 2 points  |  Green  : 2 points\n",
-      "    Level 3 : 5 points  |  Blue   : 3 points\n",
-      "    Level 4 : 7 points  |  Purple : 4 points\n",
-      "    Level 5 : 10 points |  Gold   : 5 points\n",
-      "    10 points per day required - 70 points per week.\n",
-      "    Each week starts at midnight EST on Sunday.\n",
-      "    If your name is listed below, it means that you did not reach the gift requirements. \n",
-      "    The number shown is the amount of points you are missing for this week.\n",
-      "\n",
-      "There are 70 players on the naughty list\n",
-      "kirito0077 is missing 63 points worth of gifts for this week.\n",
-      "Yuzuuuun is missing 40 points worth of gifts for this week.\n",
-      "I am Paikia is missing 55 points worth of gifts for this week.\n",
-      "Napoleon29 is missing 65 points worth of gifts for this week.\n",
-      "Anonymous is missing 44 points worth of gifts for this week.\n",
-      "Gossi is missing 64 points worth of gifts for this week.\n",
-      "Imafukyoface is missing 61 points worth of gifts for this week.\n",
-      "RealSnowBall is missing 27 points worth of gifts for this week.\n",
-      "WrranglerAlt is missing 68 points worth of gifts for this week.\n",
-      "I Am Hades is missing 44 points worth of gifts for this week.\n",
-      "command01 is missing 63 points worth of gifts for this week.\n",
-      "DEMPSEYROLL is missing 60 points worth of gifts for this week.\n",
-      "SaLaR1Iraqi is missing 49 points worth of gifts for this week.\n",
-      "Futt Bucker is missing 68 points worth of gifts for this week.\n",
-      "PSV 77 is missing 65 points worth of gifts for this week.\n",
-      "Call me Neo is missing 30 points worth of gifts for this week.\n",
-      "jihongkia is missing 68 points worth of gifts for this week.\n",
-      "XxBomontixX is missing 59 points worth of gifts for this week.\n",
-      "saef xxx is missing 44 points worth of gifts for this week.\n",
-      "Wendigo1 is missing 68 points worth of gifts for this week.\n",
-      "168 LKAA is missing 60 points worth of gifts for this week.\n",
-      "Mr Hai GeGe is missing 65 points worth of gifts for this week.\n",
-      "1st Army is missing 57 points worth of gifts for this week.\n",
-      "WeakSauce1 is missing 59 points worth of gifts for this week.\n",
-      "98er is missing 61 points worth of gifts for this week.\n",
-      "MrBoose is missing 60 points worth of gifts for this week.\n",
-      "2 FIERCE is missing 51 points worth of gifts for this week.\n",
-      "ozykel is missing 66 points worth of gifts for this week.\n",
-      "Bomonti is missing 61 points worth of gifts for this week.\n",
-      "RobJau is missing 64 points worth of gifts for this week.\n",
-      "XAN  KZ is missing 61 points worth of gifts for this week.\n",
-      "StringBuild is missing 62 points worth of gifts for this week.\n",
-      "l WARGAZM l is missing 41 points worth of gifts for this week.\n",
-      "Yazid Muslim is missing 68 points worth of gifts for this week.\n",
-      "Sandokam is missing 68 points worth of gifts for this week.\n",
-      "Mi Bae is missing 51 points worth of gifts for this week.\n",
-      "Gonnnw is missing 60 points worth of gifts for this week.\n",
-      "S L I M E is missing 65 points worth of gifts for this week.\n",
-      "w KING w is missing 58 points worth of gifts for this week.\n",
-      "30mikemike is missing 62 points worth of gifts for this week.\n",
-      "aba 012 is missing 61 points worth of gifts for this week.\n",
-      "XxMaDMaNxX is missing 26 points worth of gifts for this week.\n",
-      "Oo F1ST oO is missing 68 points worth of gifts for this week.\n",
-      "xoNANAMIox is missing 50 points worth of gifts for this week.\n",
-      "Malipolanski is missing 45 points worth of gifts for this week.\n",
-      "SonofSam is missing 65 points worth of gifts for this week.\n",
-      "THE KillER33 is missing 58 points worth of gifts for this week.\n",
-      "MoneyMoves is missing 58 points worth of gifts for this week.\n",
-      "Kyoudai is missing 63 points worth of gifts for this week.\n",
-      "NoXy is missing 63 points worth of gifts for this week.\n",
-      "CHSBank is missing 68 points worth of gifts for this week.\n",
-      "OversoulXx is missing 62 points worth of gifts for this week.\n",
-      "ShakeBurn is missing 66 points worth of gifts for this week.\n",
-      "Executive LT is missing 10 points worth of gifts for this week.\n",
-      "B CINEBE is missing 65 points worth of gifts for this week.\n",
-      "Trop 000 is missing 66 points worth of gifts for this week.\n",
-      "Tyron G is missing 63 points worth of gifts for this week.\n",
-      "Black Pearrl is missing 58 points worth of gifts for this week.\n",
-      "Bloedrivier is missing 60 points worth of gifts for this week.\n",
-      "TheSun90 is missing 63 points worth of gifts for this week.\n",
-      "HUNTER 300 is missing 65 points worth of gifts for this week.\n",
-      "Mashaakel is missing 65 points worth of gifts for this week.\n",
-      "Illonpillon is missing 64 points worth of gifts for this week.\n",
-      "CHIP B A B Y is missing 56 points worth of gifts for this week.\n",
-      "Throuwdu Q is missing 60 points worth of gifts for this week.\n",
-      "xMACKx is missing 40 points worth of gifts for this week.\n",
-      "Figurehead is missing 65 points worth of gifts for this week.\n",
-      "Jeisonn1 is missing 61 points worth of gifts for this week.\n",
-      "g i b s is missing 63 points worth of gifts for this week.\n",
-      "ChillingMama is missing 63 points worth of gifts for this week.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_report()"
    ]
