--- a/Reports Template.ipynb
+++ b/Reports Template.ipynb
@@ -31,51 +31,51 @@
     "class Guild():\n",
     "    roster = []\n",
     "    naughty_list = []\n",
-    "    def __init__(self, name, h1, h2, h3, h4, h5, p1, p2, p3, p4, p5):\n",
+    "    def __init__(self, name, hunt_1, hunt_2, hunt_3, hunt_4, hunt_5, purchase_white, purchase_green, purchase_blue, purchase_purple, purchase_gold):\n",
     "        self.name = name\n",
-    "        self.h1 = h1\n",
-    "        self.h2 = h2\n",
-    "        self.h3 = h3\n",
-    "        self.h4 = h4\n",
-    "        self.h5 = h5\n",
-    "        self.p1 = p1\n",
-    "        self.p2 = p2\n",
-    "        self.p3 = p3\n",
-    "        self.p4 = p4\n",
-    "        self.p5 = p5\n",
-    "        self.hunt = self.get_hunt()\n",
-    "        self.purchased = self.get_purchased()\n",
-    "        self.total = self.get_total()\n",
-    "        self.score = self.get_score()\n",
+    "        self.hunt_1 = hunt_1\n",
+    "        self.hunt_2 = hunt_2\n",
+    "        self.hunt_3 = hunt_3\n",
+    "        self.hunt_4 = hunt_4\n",
+    "        self.hunt_5 = hunt_5\n",
+    "        self.purchase_white = purchase_white\n",
+    "        self.purchase_green = purchase_green\n",
+    "        self.purchase_blue = purchase_blue\n",
+    "        self.purchase_purple = purchase_purple\n",
+    "        self.purchase_gold = purchase_gold\n",
+    "        self.hunt = self.get_total_member_hunts()\n",
+    "        self.purchased = self.get_total_member_purchases()\n",
+    "        self.total = self.get_member_total_gifts()\n",
+    "        self.score = self.get_member_score()\n",
     "        self.roster.append(self)\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return self.name\n",
     "        \n",
     "    def am_i_naughty(self):\n",
     "        if self.score < 70:\n",
-    "            self.naughty_list.append(self)\n",
-    "        \n",
-    "    def __repr__(self):\n",
-    "        return self.name       \n",
+    "            self.naughty_list.append(self)  \n",
     "    \n",
-    "    def get_hunt(self):\n",
-    "        return (self.h2 + self.h3 + self.h4 + self.h5)\n",
+    "    def get_total_member_hunts(self):\n",
+    "        return (self.hunt_2 + self.hunt_3 + self.hunt_4 + self.hunt_5)\n",
     "    \n",
-    "    def get_purchased(self):\n",
-    "        return (self.p1 + self.p2 + self.p3 + self.p4 + self.p5)\n",
+    "    def get_total_member_purchases(self):\n",
+    "        return (self.purchase_white + self.purchase_green + self.purchase_blue + self.purchase_purple + self.purchase_gold)\n",
     "    \n",
-    "    def get_total(self):\n",
+    "    def get_member_total_gifts(self):\n",
     "        return (self.hunt + self.purchased)\n",
     "    \n",
-    "    def get_score(self):\n",
-    "        return self.h2*2 + self.h3*5 + self.h4*7 + self.h5 *10 + self.p1 + self.p2*2 + self.p3*3 + self.p4*4 +self.p5*5\n",
+    "    def get_member_score(self):\n",
+    "        return self.hunt_2*2 + self.hunt_3*5 + self.hunt_4*7 + self.hunt_5 *10 + self.purchase_white + self.purchase_green*2 + self.purchase_blue*3 + self.purchase_purple*4 +self.purchase_gold*5\n",
     "    \n",
     "    @classmethod\n",
-    "    def find_player(self, player):\n",
+    "    def find_member(self, member):\n",
     "        for _ in self.roster:\n",
-    "            if player == _.name:\n",
+    "            if member == _.name:\n",
     "                return _\n",
     "    \n",
     "    @classmethod\n",
-    "    def get_top_hunter(self):\n",
+    "    def top_hunter(self):\n",
     "        hunt = 0\n",
     "        for _ in self.roster:\n",
     "            if _.name != 'Total' and _.name != 'Anonymous' and _.hunt > hunt: hunt = _.hunt\n",
@@ -84,22 +84,22 @@
     "                return _\n",
     "            \n",
     "    @classmethod\n",
-    "    def top_hunter(self):\n",
-    "        _ = self.get_top_hunter()\n",
+    "    def get_top_hunter(self):\n",
+    "        _ = self.top_hunter()\n",
     "        print(f\"\"\"Top Hunter Breakdown\n",
     "        Name: {_}\n",
     "        Total Gifts: {_.total}\n",
     "        Hunts: {_.hunt}\n",
-    "        Level 1s: {_.h1}\n",
-    "        Level 2s: {_.h2}\n",
-    "        Level 3s: {_.h3}\n",
-    "        Level 4s: {_.h4}\n",
-    "        Level 5s: {_.h5}\n",
+    "        Level 1s: {_.hunt_1}\n",
+    "        Level 2s: {_.hunt_2}\n",
+    "        Level 3s: {_.hunt_3}\n",
+    "        Level 4s: {_.hunt_4}\n",
+    "        Level 5s: {_.hunt_5}\n",
     "        Total Points: {round(_.score, 2)}\"\"\")\n",
     "        self.space_decorator()\n",
     "    \n",
     "    @classmethod\n",
-    "    def get_top_buyer(self):\n",
+    "    def top_buyer(self):\n",
     "        purchases = 0\n",
     "        for _ in self.roster:\n",
     "            if _.name != 'Total' and _.name != 'Anonymous' and _.purchased > purchases: purchases = _.purchased\n",
@@ -108,22 +108,22 @@
     "                return _\n",
     "            \n",
     "    @classmethod\n",
-    "    def top_packs(self):\n",
-    "        _ = self.get_top_buyer()\n",
+    "    def get_top_buyer(self):\n",
+    "        _ = self.top_buyer()\n",
     "        print(f\"\"\"Top Buyer Breakdown\n",
     "        Name: {_}\n",
     "        Total Gifts: {_.total}\n",
     "        Packs: {_.purchased}\n",
-    "        White: {_.p1}\n",
-    "        Green: {_.p2}\n",
-    "        Blue: {_.p3}\n",
-    "        Purple: {_.p4}\n",
-    "        Gold: {_.p5}\n",
+    "        White: {_.purchase_white}\n",
+    "        Green: {_.purchase_green}\n",
+    "        Blue: {_.purchase_blue}\n",
+    "        Purple: {_.purchase_purple}\n",
+    "        Gold: {_.purchase_gold}\n",
     "        Total Points: {round(_.score, 2)}\"\"\")\n",
     "        self.space_decorator()\n",
     "        \n",
     "    @classmethod\n",
-    "    def get_top_gifts(self):\n",
+    "    def top_gifts(self):\n",
     "        gifts = 0\n",
     "        for _ in self.roster:\n",
     "            if _.name != 'Total' and _.name != 'Anonymous' and _.total > gifts: gifts = _.total\n",
@@ -131,8 +131,8 @@
     "            if _.total == gifts: \n",
     "                return _\n",
     "    @classmethod\n",
-    "    def top_gifts(self):\n",
-    "        _ = self.get_top_gifts()\n",
+    "    def get_top_gifts(self):\n",
+    "        _ = self.top_gifts()\n",
     "        print(f\"\"\"Top Gifter Breakdown\n",
     "        Name: {_}\n",
     "        Hunts: {_.hunt}\n",
@@ -142,7 +142,7 @@
     "        self.space_decorator()\n",
     "            \n",
     "    @classmethod\n",
-    "    def get_top_points(self):\n",
+    "    def top_points(self):\n",
     "        points = 0\n",
     "        for _ in self.roster:\n",
     "            if _.name != 'Total' and _.name != 'Anonymous' and _.score > points: points = _.score\n",
@@ -151,8 +151,8 @@
     "                return _\n",
     "            \n",
     "    @classmethod\n",
-    "    def top_points(self):\n",
-    "        _ = self.get_top_points()\n",
+    "    def get_top_points(self):\n",
+    "        _ = self.top_points()\n",
     "        print(f\"\"\"Top Points Breakdown\n",
     "        Name: {_}\n",
     "        Hunts: {_.hunt}\n",
@@ -167,16 +167,16 @@
     "        Gifts: {_.total}\n",
     "        Hunts: {_.hunt}\n",
     "        Purchases: {_.purchased}\n",
-    "        Level 1s: {_.h1}\n",
-    "        Level 2s: {_.h2}\n",
-    "        Level 3s: {_.h3}\n",
-    "        Level 4s: {_.h4}\n",
-    "        Level 5s: {_.h5}\n",
-    "        White: {_.p1}\n",
-    "        Green: {_.p2}\n",
-    "        Blue: {_.p3}\n",
-    "        Purple: {_.p4}\n",
-    "        Gold: {_.p5}\n",
+    "        Level 1s: {_.hunt_1}\n",
+    "        Level 2s: {_.hunt_2}\n",
+    "        Level 3s: {_.hunt_3}\n",
+    "        Level 4s: {_.hunt_4}\n",
+    "        Level 5s: {_.hunt_5}\n",
+    "        White: {_.purchase_white}\n",
+    "        Green: {_.purchase_green}\n",
+    "        Blue: {_.purchase_blue}\n",
+    "        Purple: {_.purchase_purple}\n",
+    "        Gold: {_.purchase_gold}\n",
     "        Total Points: {_.score}\"\"\")\n",
     "    \n",
     "    @classmethod\n",
@@ -185,32 +185,32 @@
     "    Total Gifts: {round(_.total/7, 2)}\n",
     "    Hunts: {round(_.hunt/7, 2)}\n",
     "    Purchases: {round(_.purchased/7, 2)}\n",
-    "    Level 1s: {round(_.h1/7, 2)}\n",
-    "    Level 2s: {round(_.h2/7, 2)}\n",
-    "    Level 3s: {round(_.h3/7, 2)}\n",
-    "    Level 4s: {round(_.h4/7, 2)}\n",
-    "    Level 5s: {round(_.h5/7, 2)}\n",
+    "    Level 1s: {round(_.hunt_1/7, 2)}\n",
+    "    Level 2s: {round(_.hunt_2/7, 2)}\n",
+    "    Level 3s: {round(_.hunt_3/7, 2)}\n",
+    "    Level 4s: {round(_.hunt_4/7, 2)}\n",
+    "    Level 5s: {round(_.hunt_5/7, 2)}\n",
     "    Total Points: {round(_.score/7, 2)}\"\"\")\n",
     "        \n",
     "    @classmethod\n",
     "    def get_total_gifts(self):\n",
-    "        self.overall_breakdown(self.find_player('Total'))\n",
+    "        self.overall_breakdown(self.find_member('Total'))\n",
     "        self.space_decorator()\n",
     "        \n",
     "    @classmethod\n",
     "    def get_anon_gifts(self):\n",
-    "        self.overall_breakdown(self.find_player('Anonymous'))\n",
+    "        self.overall_breakdown(self.find_member('Anonymous'))\n",
     "        self.space_decorator()\n",
     "    \n",
     "    @classmethod\n",
     "    def get_average(self):\n",
-    "        self.average_breakdown(self.find_player('Total'))\n",
+    "        self.average_breakdown(self.find_member('Total'))\n",
     "        self.space_decorator()\n",
     "        \n",
     "    @classmethod\n",
     "    def get_naughty_list(self):\n",
     "        print(\"\"\"-What it means to be on the naughty list-\n",
-    "    For each hunt report, we translate the gifts from each player into points:\n",
+    "    For each hunt report, we translate the gifts from each member into points:\n",
     "    Loot                |  Bonus \n",
     "    level 1 : 0 points  |  White  : 1 point\n",
     "    Level 2 : 2 points  |  Green  : 2 points\n",
@@ -222,7 +222,7 @@
     "    If your name is listed below, it means that you did not reach the gift requirements. \n",
     "    The number shown is the amount of points you are missing for this week.\"\"\")\n",
     "        print()\n",
-    "        print(f\"There are {len(self.naughty_list)} players on the naughty list\")\n",
+    "        print(f\"There are {len(self.naughty_list)} members on the naughty list\")\n",
     "        print()\n",
     "        for _ in self.naughty_list:\n",
     "            print(f\"{_} is missing {70-_.score} points worth of gifts for this week.\")\n",
@@ -245,17 +245,17 @@
     "    for _ in report.Name:\n",
     "        roster.append(_)\n",
     "    for _ in roster:\n",
-    "        h1 = report.query(f'Name == \"{_}\"').Level_1_H.sum()\n",
-    "        h2 = report.query(f'Name == \"{_}\"').Level_2_H.sum()\n",
-    "        h3 = report.query(f'Name == \"{_}\"').Level_3_H.sum()\n",
-    "        h4 = report.query(f'Name == \"{_}\"').Level_4_H.sum()\n",
-    "        h5 = report.query(f'Name == \"{_}\"').Level_5_H.sum()\n",
-    "        p1 = report.query(f'Name == \"{_}\"').Level_1_P.sum()\n",
-    "        p2 = report.query(f'Name == \"{_}\"').Level_2_P.sum()\n",
-    "        p3 = report.query(f'Name == \"{_}\"').Level_3_P.sum()\n",
-    "        p4 = report.query(f'Name == \"{_}\"').Level_4_P.sum()\n",
-    "        p5 = report.query(f'Name == \"{_}\"').Level_5_P.sum()\n",
-    "        g = Guild(name=_, h1=h1, h2=h2, h3=h3, h4=h4, h5=h5, p1=p1, p2=p2, p3=p3, p4=p4, p5=p5)"
+    "        hunt_1 = report.query(f'Name == \"{_}\"').Level_1_H.sum()\n",
+    "        hunt_2 = report.query(f'Name == \"{_}\"').Level_2_H.sum()\n",
+    "        hunt_3 = report.query(f'Name == \"{_}\"').Level_3_H.sum()\n",
+    "        hunt_4 = report.query(f'Name == \"{_}\"').Level_4_H.sum()\n",
+    "        hunt_5 = report.query(f'Name == \"{_}\"').Level_5_H.sum()\n",
+    "        purchase_white = report.query(f'Name == \"{_}\"').Level_1_P.sum()\n",
+    "        purchase_green = report.query(f'Name == \"{_}\"').Level_2_P.sum()\n",
+    "        purchase_blue = report.query(f'Name == \"{_}\"').Level_3_P.sum()\n",
+    "        purchase_purple = report.query(f'Name == \"{_}\"').Level_4_P.sum()\n",
+    "        purchase_gold = report.query(f'Name == \"{_}\"').Level_5_P.sum()\n",
+    "        g = Guild(name=_, hunt_1=hunt_1, hunt_2=hunt_2, hunt_3=hunt_3, hunt_4=hunt_4, hunt_5=hunt_5, purchase_white=purchase_white, purchase_green=purchase_green, purchase_blue=purchase_blue, purchase_purple=purchase_purple, purchase_gold=purchase_gold)"
    ]
   },
   {
@@ -268,10 +268,10 @@
     "    get_roster()\n",
     "    for _ in Guild.roster:\n",
     "        _.am_i_naughty() \n",
-    "    Guild.top_hunter()\n",
-    "    Guild.top_gifts()\n",
-    "    Guild.top_packs()\n",
-    "    Guild.top_points()\n",
+    "    Guild.get_top_hunter()\n",
+    "    Guild.get_top_gifts()\n",
+    "    Guild.get_top_packs()\n",
+    "    Guild.get_top_points()\n",
     "    Guild.get_total_gifts()\n",
     "    Guild.get_anon_gifts()\n",
     "    Guild.get_average()\n",
